# tuxgenie

./: .gitignore  CLAUDE.md  LAUNCH_POSTS.md  README.md  create_deb.py  install.sh  pyproject.toml  sync_version.sh  tuxgenie.py
.github/workflows/: auto-release.yml  auto-tag.yml  ci.yml  release.yml
docs/: index.html  install.sh  vercel.json
tests/: test_tuxgenie.py
