[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tuxgenie"
version = "3.4.0"
description = "AI-powered Linux assistant — fix any problem in plain English"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["anthropic>=0.20.0"]

keywords = ["linux", "ai", "assistant", "claude", "terminal", "troubleshooter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.scripts]
tuxgenie = "tuxgenie:main"

[project.urls]
Homepage = "https://github.com/asperatech/tuxgenie"
Issues   = "https://github.com/asperatech/tuxgenie/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py38"
