[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tuxgenie"
version = "4.3.0"
description = "AI-powered Linux assistant — fix any Linux problem in plain English"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = ["anthropic>=0.20.0"]

keywords = ["linux", "ai", "assistant", "claude", "terminal", "troubleshooter", "sysadmin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.scripts]
tuxgenie = "tuxgenie:main"

[project.urls]
Homepage    = "https://github.com/ramchandragada/tuxgenie"
Issues      = "https://github.com/ramchandragada/tuxgenie/issues"
Source      = "https://github.com/ramchandragada/tuxgenie"
Changelog   = "https://github.com/ramchandragada/tuxgenie/releases"

[tool.setuptools]
py-modules = ["tuxgenie"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py38"
